classes and object with other basics